styles issue on IE

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     /* --main-theme-color: #EE6201;   */
 }
 
+.IE-background{
+    background-color: #05a4d4; 
+}
+
 body{
     padding-top:70px;
     background: url(../images/bkg.jpg);
@@ -77,7 +81,7 @@ body{
 }
 
 .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
-    color: var(--main-theme-color);
+    color: var(--main-theme-color, #05a4d4);
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -93,7 +97,7 @@ body{
 }
 
 .logo{
-    background: var(--main-theme-color);
+    background: var(--main-theme-color, #05a4d4);
     padding: 0.5rem;
     border-radius:50px; 
     border: 2px solid #ffffff;
@@ -103,8 +107,8 @@ body{
 }
 
 #section4{
-    border-bottom: 0.0019rem solid var(--main-theme-color); 
-    -webkit-box-shadow: 0px 7px 12px 0px var(--main-theme-color); 
+    border-bottom: 0.0019rem solid var(--main-theme-color, #05a4d4); 
+    -webkit-box-shadow: 0px 7px 12px 0px var(--main-theme-color, #05a4d4); 
     box-shadow: 0px 7px 12px 0px rgba(0,0,0,0.36); 
 }
 .content{
@@ -128,7 +132,7 @@ body{
 .nameContent .btn:hover{
     font-size: 3.6rem;
     background: transparent;
-    color: var(--main-theme-color);
+    color: var(--main-theme-color, #05a4d4);
     margin-top: 2rem;
 }
 
@@ -243,7 +247,7 @@ p{
 /* Skills - section 3 */
 /* ==================================== */
 .skill-heading {
-    background: var(--main-theme-color);
+    background: var(--main-theme-color, #05a4d4);
     padding: .3rem;
     text-align: center;
     border-radius: 1rem;
@@ -253,7 +257,7 @@ p{
 }
 .skillsGroup{
     margin:10px;
-    border-left:10px solid var(--main-theme-color);
+    border-left:10px solid var(--main-theme-color, #05a4d4);
     border-top-left-radius: 2rem;
     border-bottom-left-radius: 2rem;
 }
@@ -306,7 +310,7 @@ p{
 }
 
 .projectName a:hover{
-    color:var(--main-theme-color);
+    color:var(--main-theme-color #05a4d4);
     transition: all 0.7s ease;
 }
 
@@ -314,7 +318,7 @@ p{
     font-size: 1.5rem;
     text-align: center;
     margin:0.5rem;
-    background:var(--main-theme-color);
+    background:var(--main-theme-color #05a4d4);
     border-radius: 100%;
     padding: 0.5rem;
     z-index: 2;;
@@ -350,7 +354,7 @@ input{
 .btn-lg{
     outline: none;
     border: none;
-    background:var(--main-theme-color);
+    background:var(--main-theme-color, #05a4d4);
     color: #ffffff;
     box-shadow: #4e4e4d 0px 6px;
     position: relative;
@@ -399,7 +403,7 @@ input{
 }
 
 .modalbody .btn{
-background: var(--main-theme-color);
+background: var(--main-theme-color, #05a4d4);
 border:none;
 color:#faf7f7;
 }
